@@ -63,6 +63,7 @@ static void compatInit(Compatibility_t &c)
     c.fix_blooper_stomp_effect = true;
     c.keep_bullet_bill_dir = true;
     c.fix_pswitch_dragon_coin = true;
+    c.fix_swooper_start_while_inactive = true;
     c.free_level_res = true;
     c.free_world_res = true;
     c.NPC_activate_mode = NPC_activate_modes::smart;
@@ -87,6 +88,7 @@ static void compatInit(Compatibility_t &c)
         c.fix_blooper_stomp_effect = false;
         c.keep_bullet_bill_dir = false;
         c.fix_pswitch_dragon_coin = false;
+        c.fix_swooper_start_while_inactive = false;
         c.free_level_res = false;
         c.free_world_res = false;
         c.NPC_activate_mode = NPC_activate_modes::onscreen;
@@ -158,9 +160,10 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
         compat.read("fix-blooper-stomp-effect", c.fix_blooper_stomp_effect, c.fix_blooper_stomp_effect);
         compat.read("keep-bullet-bill-direction", c.keep_bullet_bill_dir, c.keep_bullet_bill_dir);
         compat.read("fix-pswitch-dragon-coin", c.fix_pswitch_dragon_coin, c.fix_pswitch_dragon_coin);
+        compat.read("fix-swooper-start-while-inactive", c.fix_swooper_start_while_inactive, c.fix_swooper_start_while_inactive);
         compat.read("free-level-res", c.free_level_res, c.free_level_res);
         compat.read("free-world-res", c.free_world_res, c.free_world_res);
-        IniProcessing::StrEnumMap activModes =
+        const IniProcessing::StrEnumMap activModes =
         {
             {"onscreen", (int)NPC_activate_modes::onscreen},
             {"smart", (int)NPC_activate_modes::smart},
